force-app/main/default/objects/Employee_Leave_Details__c/Employee_Leave_Details__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Details</label>
    <nameField>
        <displayFormat>ELD-{0000}</displayFormat>
        <label>Employee Leave Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>