force-app/main/default/objects/Employee_Leave_Details__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>