force-app/main/default/objects/Employee_Leave_Details__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employee Leave Details</relationshipLabel>
    <relationshipName>Employee_Leave_Details</relationshipName>
    <type>Lookup</type>
</CustomField>