force-app/main/default/objects/Employee_Leave_Details__c/fields/Employee_Leave_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_Leave_Account__c</fullName>
    <label>Employee Leave Account</label>
    <referenceTo>Employee_Leave_Account__c</referenceTo>
    <relationshipLabel>Employee Leave Details</relationshipLabel>
    <relationshipName>Employee_Leave_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>