force-app/main/default/objects/Employee_Leave_Details__c/fields/Number_of_Days_Taken__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Taken__c</fullName>
    <formula>(To_Date__c - From_Date__c +1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>