force-app/main/default/objects/Employee_Leave_Details__c/validationRules/Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Employee__c= Employee__c,
    NOT(ISNEW()),
    (From_Date__c&lt;= To_Date__c&amp;&amp; To_Date__c&gt;= From_Date__c)
)</errorConditionFormula>
    <errorMessage>Already you have applied leave today</errorMessage>
</ValidationRule>