force-app/main/default/objects/Employee_Leave_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leave_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>